# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: ci.yaml
page_analyzer/: app.py
page_analyzer/controllers/: __init__.py  app.py
page_analyzer/models/: check_model.py  url_model.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
