[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.15.13",
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.1",
    "pytest",
    "pytest-cov",
    "validators>=0.35.0",
    "requests>=2.34.2",
    "beautifulsoup4>=4.14.3",
]
